--- a/style/style.css
+++ b/style/style.css
@@ -566,6 +566,42 @@
 
 
 /* perfect img part ended */
+.review-title {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.review-title h2 {
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.review-title p {
+    margin-top: 15px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.review {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 100px;
+}
+
+.review h4 {
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+}
+.review p{
+    margin-top: 10px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+}
 
 /* newsletter style start */
 .newsletter-and-img {
@@ -790,18 +826,28 @@ hr {
         width: 100%;
         height: 100%;
         position: relative;
-       
+
     }
-    .tour-style{
+
+    .tour-style {
         padding: px;
         position: absolute;
         top: 5px;
         left: 50px;
         width: 200px;
         height: 150px;
+
+    }
+    .review-title{
+        text-align:left;
+    }
+    .review{
+        flex-direction: column;
+    }
+    .review img{
         
     }
-
+    
     .perfect-img {
 
         flex-direction: column;
@@ -810,6 +856,9 @@ hr {
     #per-img {
         margin-top: 20px;
     }
+
+    /* perfect img style ended */
+
 
     .newsletter-and-img {
         flex-direction: column;
